unpackaged/main/default/objects/bt_stripe__Allocation__c/fields/bt_stripe__Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Amount__c</fullName>
    <description>The amount to allocate to the related Invoice or Line Item.</description>
    <inlineHelpText>The amount to allocate to the related Invoice or Line Item.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>