unpackaged/main/default/objects/bt_stripe__Allocation__c/fields/bt_stripe__Line_Item__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>bt_stripe__Line_Item__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>