unpackaged/main/default/objects/bt_stripe__Allocation__c/fields/bt_stripe__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>related salesdocument</description>
    <label>Invoice</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>