unpackaged/main/default/objects/bt_stripe__Allocation__c/fields/bt_stripe__Transaction__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>