unpackaged/main/default/objects/bt_stripe__Allocation__c/fields/bt_stripe__Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Type__c</fullName>
    <description>Defines the Type of Allocation. Payment, Refund or Write Off. The default value is Payment.</description>
    <inlineHelpText>Select an applicable Allocation Type. The options are, Payment, Refund or Write Off.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>